# watermark-tool

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md  batch_watermark.sh  watermark  watermark.cpp
.github/workflows/: ci.yml
